--- a/style.css
+++ b/style.css
@@ -155,15 +155,27 @@ body {
   height: 8.2rem;
   width: 8.2rem;
 }
+.cookie__icon--trash {
+  height: 2.4rem;
+  width: 2.4rem;
+}
+.cookie__icon--trash:hover {
+  fill: var(--color-primary-dark);
+}
 
+.cookie__buttons {
+  display: flex;
+  justify-content: end;
+  gap: 1.2rem;
+}
 .cookie__button {
   font-size: 1.8rem;
   font-weight: 700;
 
   display: inline-block;
-  padding: 1.2rem 0.8rem;
+  padding: 1.2rem 3.2rem;
   border: none;
-  border-radius: 2px;
+  border-radius: 8px;
   cursor: pointer;
 
   color: var(--color-white);
